<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/options_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/leeroy_jenkins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="executeLeeroy"
        android:text="@string/just_do_it_button_name"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/async_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="executeAsyncTask"
        android:text="@string/async_task_button_name"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/event_bus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="executeEventBus"
        android:text="@string/event_bus_button_name"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/rx_java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="executeRxJava"
        android:text="@string/rx_java_button_name"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/couroutines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="executeCoroutines"
        android:text="@string/coroutines_button_name"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="cancelTasks"
        android:text="@string/cancel_button_name"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/options_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        app:constraint_referenced_ids="leeroy_jenkins, async_task, event_bus, rx_java, couroutines, cancel"
        app:flow_horizontalGap="36dp"
        app:flow_verticalGap="24dp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@+id/audio_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/audio_progress"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/video_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/audio_icon"
        app:layout_constraintTop_toBottomOf="@+id/options_group"
        app:rcProgressColor="@color/colorPrimary" />

    <com.akexorcist.roundcornerprogressbar.RoundCornerProgressBar
        android:id="@+id/video_progress"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ui_interaction_tester"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/video_icon"
        app:layout_constraintTop_toBottomOf="@+id/audio_progress"
        app:rcProgressColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/video_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_video_black_18dp"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@id/video_progress"
        app:layout_constraintEnd_toStartOf="@+id/video_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/video_progress" />

    <ImageView
        android:id="@+id/audio_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_audio_black_18dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/audio_progress"
        app:layout_constraintEnd_toStartOf="@+id/audio_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/audio_progress" />

    <Button
        android:id="@+id/ui_interaction_tester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/interaction_test_button_name"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>